fixed post skeleton overlapping

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,3 +31,7 @@ body {
 a {
 	text-decoration: none;
 }
+
+.mantine-Skeleton-root {
+	z-index: 1 !important;
+}
